#                                                                                                          #
############################################################################################################


For more details, please see the README file.

March, 24, 2023, AnnotSV version 3.3.1
	- Add bugfix with the use of the SVminSize option

March, 23, 2023, AnnotSV version 3.3
	- Add bugfix regarding genomic start coordinates. TSV and VCF output files are now both 1-based, with inclusive-end (whatever the input file format)
	- Add interpretation of the square-bracketed SV breakend notations within the VCF. 
	  This new module relies on the homogenization rules provided within the variant-extractor tool developed by Rodrigo Martín.
	- Update of the variantconvert distribution (1.2.1 installed)
	- Automation of the variantconvert module installaton
	- Reformat of the unannotated.tsv file
	- Add of the .gitignore file
	- VCF format handling update. According to the VCF 4.4 specification, the SVTYPE has now been deprecated (due to redundancy with ALT). 
	  The SV type is now extracted primarily from the ALT column, then from the SVTYPE field in the INFO column if available.
	- Add bugfix for the TAD annotations update process

January, 31, 2023, AnnotSV version 3.2.3
	- Report of the "Samples_ID" column in ALL outputs (default, sample = NA) (required by variantconvert)
	- Add the creation of a VCF output file from a "BED" SV input file. The "-vcf" and "-svtBEDcol" options are required.
	- In VCF output, the GT is set to “1/.” for each SV if the GT is not given in input (BED input file)
	- Add bugfix concerning Mouse annotation

January, 06, 2023, AnnotSV version 3.2.2
	- Add bugfix concerning the use of variantconvert to create the VCF output file (GRCh37/GRCh38, configfiles)

December, 21, 2022, AnnotSV version 3.2.1
	- Add bugfix concerning the partial overlap with some specific dbVar SV (same start and end locations)
